--- a/Phase-3/README
+++ b/Phase-3/README
@@ -2,19 +2,7 @@
 Functional Simulator for RISCV Processor
 ================================================
 
-README
-
-CS-204 project, RISC-V SIMULATOR, Phase 2, GROUP :-
-Languages:- C++
-
-TEAM MEMBERS:- 
-        *Prateek Saini (2018CSB1114)
-	*Naveen Yadav  (2018CSB1106)
-	*Aman Dhawan   (2018CSB1070)
-	*Vikram Singh  (2018CSB1194)
-	*Vishal Yadav  (2018CSB1128)
-
-Phase 2:-
+Phase 3:-
 Implemented pipeline structure of 32bit RISC-V instruction execution with and without data forwarding and one bit-predictor.
  
 Table of contents
@@ -27,7 +15,7 @@ Directory Structure:
 --------------------
 CS112-Project
   |
-  |- src
+  |- code
       |- main.cpp
       |- example.txt
 
@@ -58,19 +46,6 @@ HOW TO RUN:-
 	if you choose pipeling then you further have to choose to use data forwarding or 	not. Or one but predictor or not.
 	You will get your desired output in terminal.
 
-
-Work by Indviduals:-
-------------
-
-Prateek Saini -> Stalling 
-	     ->	One Bit Predictor
-
-Naveen Yadav -> Stalling 
-	     ->	Data Forwarding
-	     -> overall structure of code(main.cpp)
-
-Aman Dhawan -> One Bit Predictor , 
-            -> Readme and Documentation .
 
 Algorithm and Methodology -> 
 We have implemented pipelining in our RISC v simulator which supports data forwarding and one but predictor. We have know to control them
